test/classes/initializers/compilerGenerated/generics/issue-16508-default-ok.good
issue-16508-default-ok.chpl:5: error: default initialization with type 'TypelessField(int(64))' is not yet supported
issue-16508-default-ok.chpl:2: note: field 'field' is a generic value
issue-16508-default-ok.chpl:2: note: consider separately declaring a type field for it or using a 'new' call
