test/classes/initializers/compilerGenerated/generics/issue-16508-default-ok.chpl
record TypelessField {
  var field;
}
type TypelessFieldInt = TypelessField(int);
var b: TypelessFieldInt;
writeln(b.field, ": ", b.field.type:string);
